# Agente-de-Gobierno

./: .gitignore  DOCUMENTACION SPRINT 5.md  README.md  app.py  handoff.md  pyproject.toml  serve.py  sprintRecomendaciones.md
.streamlit/: config.toml
docs/: arquitectura_sprint1.md  arquitectura_sprint2.md  arquitectura_sprint3.md  arquitectura_sprint4.md  arquitectura_sprint5.md  grafo_sprint1.mmd  guia_ejecucion.md
scripts/: generar_grafo.py  ingestar_planes.py
src/ate/: __init__.py  __main__.py  cli.py
src/ate/agents/: __init__.py  contraste.py  extraccion.py  generador.py  planificador.py  rag.py  validador.py
src/ate/candidatos/: __init__.py  extractor.py  modelo.py  registro.py
src/ate/config/: __init__.py  settings.py
src/ate/graph/: __init__.py  builder.py
src/ate/rag/: __init__.py  cliente.py  ingestor.py
src/ate/schemas/: __init__.py  state.py
src/ate/tools/: __init__.py  _cne_api.py  _http.py  _socrata.py  busqueda_noticias.py  cne.py  datos_abiertos.py  rag_planes.py  registry.py  secop.py
tests/: conftest.py  test_candidatos.py  test_cne_api.py  test_contraste.py  test_e2e_sprint5.py  test_extraccion.py  test_generador.py  test_graph.py  test_planificador.py  test_query_rewriting.py  test_rag.py  test_tools.py  test_tools_apis.py  test_validador.py
web/: app.js  index.html  styles.css
